Create Package and Java 17 - Port over project to java 17 - Update README.md - Remove manual artifact